fix some spacing, and conserve vertial space in the palettes panel

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -594,11 +594,6 @@ header {
 	display: none !important;
 }
 
-.starter-palettes-toggle {
-	min-height: 2.75rem;
-	padding: 0.5rem 0;
-}
-
 .starter-palette-option {
 	display: flex;
 	align-items: center;
